<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!-- Notification -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="button_download">Download</string>

    <!-- Main view -->
    <string name="glide_radio_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_button_text">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_radio_button_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="download_image_content_description">A cloud download icon</string>

    <!-- Detail view -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name_text">File name:</string>
    <string name="status_text">Status:</string>
    <string name="ok_button_text">OK</string>

</resources>
